syntax = "proto3";

// Main component type enum
enum ComponentType {
  COMPONENT_UNKNOWN = 0;
  COMPONENT_LIGHTS = 1;
  COMPONENT_MOTORS = 2;
  COMPONENT_BATTERIES = 3;
  COMPONENT_CONTROLS = 4;
  COMPONENT_SENSORS = 5;
  COMPONENT_SYSTEM = 6;
}

// Main message container
message KartMessage {
  ComponentType component_type = 1;
  uint32 timestamp = 14;
  uint32 sequence = 15;
  uint32 node_id = 16;
}

// Options for nanopb to optimize for small code size
option (nanopb_fileopt).max_size = 256;
option (nanopb_fileopt).max_count = 8;
